<resources>
    <string name="app_name">Grabble</string>

    <!--Temporarily used Strings-->
    <string name="temp_button_clicked">button clicked!</string>
    <string name="empty_string"></string>

    <!--Main Page Strings-->
    <string name="main_title">GRABBLE</string>
    <string name="main_version">VER</string>
    <string name="main_start_grabble">GRAB LETTERS</string>
    <string name="main_start_assemble">START ASSEMBLE</string>
    <string name="main_achievements">ACHIEVEMENTS</string>
    <string name="main_statistics">STATISTICS</string>
    <string name="main_settings">SETTINGS</string>
    <string name="main_about">ABOUT</string>
    <string name="main_help">HELP</string>
    <string name="main_share">SHARE</string>
    <string name="title_activity_map">Map</string>

    <!--Statistics Page Strings-->
    <string name="statistics_01">Total Score:</string>
    <string name="statistics_02">Word Completed:</string>
    <string name="statistics_03">Average Score:</string>
    <string name="statistics_04">Favourite Letter:</string>
    <string name="statistics_05">Fav Letter used:</string>
    <string name="statistics_06">Highest Score:</string>
    <string name="statistics_07">Highscore Word:</string>
    <string name="statistics_08">Letters Collected:</string>
    <string name="statistics_09">Collected Today:</string>
    <string name="statistics_10">Walked Distance:</string>
    <string name="statistics_11">Walked Today:</string>
    <string name="statistics_12">Eagle Eye Used:</string>
    <string name="statistics_13">Grabber Used:</string>

    <!--Settings Page Strings-->
    <string name="settings_01_name">Left Hand Mode</string>
    <string name="settings_02_name">Level Bonus</string>
    <string name="settings_03_name">Hide Help Button</string>
    <string name="settings_04_name">Hard Mode!</string>
    <string name="settings_05_name">Nuke Myself!</string>
    <string name="setting_01_description">Switch On to move buttons to left side.</string>
    <string name="setting_02_description">Enhanced Grab and Zoom Distance.</string>
    <string name="setting_03_description">Hide the Help Button on all pages.</string>
    <string name="setting_04_description">A more balanced mode. (NOT reversable)</string>
    <string name="setting_05_description">Clear All of the play data. (NOT reversable)</string>

    <!--About Page Strings-->
    <string name="about_current_version">Current Version:</string>
    <string name="about_required_system">Required API Level:</string>
    <string name="about_required_google">Required Google Play Level:</string>
    <string name="about_your_system">Your Android Version:</string>
    <string name="about_your_google">Your Google Play Version:</string>
    <string name="about_your_api">Your API Level:</string>
    <string name="about_temp_version">1.0.0</string>
    <string name="about_temp_range">15 - 23</string>
    <string name="about_temp_google">8.4.0</string>

</resources>
